--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Clean Architecture"
+rootProject.name = "Go To Outside"
 include ':domain'
 include ':presentation'
 include ':data'
