--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -9,17 +9,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GoToOutsideAndroid">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.student.StudentMainActivity"
             android:exported="true">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
 
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+        </activity>
+        <activity
+            android:name=".view.teacher.TeacherMainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
